--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 body.main {
     font-family: 'Open Sans', sans-serif;
     color: rgb(104, 102, 102);
+    padding: 0px;
+    margin: 0px;
 }
 
 
@@ -12,10 +14,13 @@ div.grid_container {
     height: 680px;
     margin:0 auto;
     padding: 30px;
+    border: 1 solid;
+    border-radius: 5px;
+    box-shadow:5px 5px 10px 2px rgb(133, 133, 133);
 
     display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     column-gap: 25px;
     row-gap: 25px;
     
@@ -37,27 +42,34 @@ div.card {
     border-radius: 5px;
 
     box-shadow:5px 5px 10px 2px rgb(133, 133, 133);
+
+    display: grid;
+    grid-template-rows: 1fr 0.5fr 1fr 0.5fr 1fr;
 }
 
 img {
     width: 60px;
     height: 60px;
 }
-
-div.img_item {
-    padding-top: 10px;
-    padding-bottom: 5px;
+h3 {
+    height: 60px;
 }
 
-p {
-    padding: 5px;
+div.paragraphe {
     font-size: x-small;
     font-weight: bold;
+    height: 80px;
+}
+div.hr_line {
+    width: 30px;
+    margin: 0 auto;
 }
 
 a {
+    color: rgb(104, 102, 102);
     text-decoration: none;
     text-transform: uppercase;
+
     padding: 10px;
 
     font-size: x-small;
@@ -76,7 +88,25 @@ a:hover {
 
     box-shadow: 3px 3px 5px 3px lightgrey;
 }
-div.hr_line {
-    width: 30px;
-    margin: 0 auto;
+
+@media screen and (max-width: 1270px) {
+    div.grid_container {
+        height: 1020px;
+
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 25px;
+        row-gap: 25px;
+    }
+}
+
+@media screen and (max-width: 980px) {
+    div.grid_container {
+        height: 1360px;
+
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 25px;
+        row-gap: 25px;
+    }
 }
