--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body.main {
 
 div.grid_container {
     background-color: rgb(221, 255, 255);
-    width: 60%;
+    width: 80%;
     height: 680px;
     margin:0 auto;
     padding: 30px;
@@ -18,15 +18,21 @@ div.grid_container {
     border-radius: 5px;
     box-shadow:5px 5px 10px 2px rgb(133, 133, 133);
 
-    display: grid;
-
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 25px;
-    row-gap: 25px;
-    
     background-image: url('./94e917b0.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+
+    display: grid;
+
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 1fr 1fr;
+    column-gap: 25px;
+    row-gap: 25px;
+
+    grid-template-areas: 
+    "nav card1 card2 card3 card4"
+    "nav card5 card6 card7 card8"
+    ;
     
 }
 
@@ -47,6 +53,22 @@ div.card {
     grid-template-rows: 1fr 0.5fr 1fr 0.5fr 1fr;
 }
 
+nav {
+    background-color: rgb(90, 52, 2);
+
+    width: 100;
+    padding: 10px;
+
+    border: 1px solid rgb(226, 226, 226);
+    border-radius: 5px;
+
+    box-shadow:5px 5px 10px 2px rgb(133, 133, 133);
+
+    display: grid;
+    grid-template-rows: repeat(15, 1fr);
+    
+}
+
 img {
     width: 60px;
     height: 60px;
@@ -65,7 +87,7 @@ div.hr_line {
     margin: 0 auto;
 }
 
-a {
+a.link_card {
     color: rgb(104, 102, 102);
     text-decoration: none;
     text-transform: uppercase;
@@ -74,13 +96,27 @@ a {
 
     font-size: x-small;
     font-weight: bold;
+
+}
+a.nav_link {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+
+    font-size: x-small;
+    font-weight: bold;
+
 }
 
-a:visited {
+a.link_card:visited {
     color: rgb(104, 102, 102);
 }
 
-a:hover {
+a.nav_link:visited {
+    color: white;
+}
+
+a.link_card:hover {
     background-color:rgb(82, 167, 247);
     color: white;
     border: 1 solid skyblue;
@@ -88,6 +124,51 @@ a:hover {
 
     box-shadow: 3px 3px 5px 3px lightgrey;
 }
+
+a.nav_link:hover {
+    color:rgb(252, 252, 67);
+    font-size: 12px;
+    text-shadow: 5px 5px 5px rgb(250, 248, 248);
+}
+
+nav.navleft {
+    grid-area: nav;
+    
+}
+
+div.nav_link {
+    padding: 3px;
+    text-align: center;
+
+    margin: 0 auto;
+}
+
+
+div.card1 {
+    grid-area: card1;
+}
+div.card2 {
+    grid-area: card2;
+}
+div.card3 {
+    grid-area: card3;
+}
+div.card4 {
+    grid-area: card4;
+}
+div.card5 {
+    grid-area: card5;
+}
+div.card6 {
+    grid-area: card6;
+}
+div.card7 {
+    grid-area: card7;
+}
+div.card8 {
+    grid-area: card8;
+}
+
 
 @media screen and (max-width: 1270px) {
     div.grid_container {
