--- a/style.css
+++ b/style.css
@@ -200,12 +200,22 @@ div.card8 {
 }
 
 @media screen and (max-width: 980px) {
+    
+    nav {
+        
+        width: 0px;
+        height: 0px;
+        display: none;
+    }
+    
     div.grid_container {
         height: 1360px;
 
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(5, 1fr);
+        column-gap: 25px;
+        row-gap: 25px;
 
         grid-template-areas: 
         "card1 card2"
@@ -213,6 +223,40 @@ div.card8 {
         "card5 card6"
         "card7 card8"
         "nav nav"
+        ;
+
+        column-gap: 25px;
+        row-gap: 25px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    
+    nav {
+        
+        width: 0px;
+        height: 0px;
+        display: none;
+    }
+    
+    div.grid_container {
+        height: 2730px;
+
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        row-gap: 25px;
+
+        grid-template-areas: 
+        "card1"
+        "card2"
+        "card3"
+        "card4"
+        "card5"
+        "card6"
+        "card7"
+        "card8"
+        "nav"
         ;
 
         column-gap: 25px;
